# SDL_output

./: CMakeLists.txt  README.md  test_result_calibration.txt  test_results.txt
output_test/: config.xml
stimulator_AVoutput/: av_screen.cpp  av_screen.h  main.cpp  screen_config.cpp  screen_config.h  test_config.h
stimulator_Events/: events.cpp  events.h
